--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 
     --black: #1C1917;
     --gray: #a1a1a1;
-    --green: #4ade80;
+    --green: rgb(74, 222, 128);
     --orange: #f59e0b;
     --peach: #F7E9DC;
-    --red: #f87171;
+    --red: rgb(248, 113, 113);
     --white: #FAFAF9;
 }
 
